--- a/package.json
+++ b/package.json
@@ -33,16 +33,16 @@
     "singleQuote": true,
     "trailingComma": "es5"
   },
-  "name": "react-chunks-download",
+  "name": "react-chunks-to-file",
   "author": "nanagan",
-  "module": "dist/react-chunks-download.esm.js",
+  "module": "dist/react-chunks-to-file.esm.js",
   "size-limit": [
     {
-      "path": "dist/react-chunks-download.cjs.production.min.js",
+      "path": "dist/react-chunks-to-file.cjs.production.min.js",
       "limit": "10 KB"
     },
     {
-      "path": "dist/react-chunks-download.esm.js",
+      "path": "dist/react-chunks-to-file.esm.js",
       "limit": "10 KB"
     }
   ],
