--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
   "dependencies": {
     "@types/file-saver": "^2.0.5",
     "@types/tiny-async-pool": "^2.0.0",
-    "axios": "^0.27.2"
+    "axios": "^0.27.2",
+    "file-saver": "^2.0.5",
+    "tiny-async-pool": "^2.1.0"
   }
 }
