--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.1",
+  "version": "1.0.2",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -35,7 +35,13 @@
   },
   "name": "react-chunks-to-file",
   "author": "nanagan",
-  "keywords": ["react", "download", "chunk", "download file", "concurrency"],
+  "keywords": [
+    "react",
+    "download",
+    "chunk",
+    "download file",
+    "concurrency"
+  ],
   "module": "dist/react-chunks-to-file.esm.js",
   "size-limit": [
     {
